# dgm-2024-vae-diffusion

./: .gitignore  .gitmodules  README.md  download.sh  pyproject.toml  requirements.txt
datasets/MNIST/: README.md
diffuse_vae_310/: README.md  download.sh  pyproject.toml
diffuse_vae_310/notebooks/: sample.ipynb
diffuse_vae_310/src/baseline/: test.py  train_ddpm.py
diffuse_vae_310/src/baseline/configs/: config_test.yaml
diffuse_vae_310/src/baseline/configs/dataset/cifar10/: test.yaml  train.yaml
diffuse_vae_310/src/baseline/datasets/: afhq.py  celeba.py  celebahq.py
diffuse_vae_310/src/baseline/eval/ddpm/: generate_recons.py  interpolate_ddpm.py  interpolate_vae.py  sample_cond.py
diffuse_vae_310/src/baseline/models/: vae.py
diffuse_vae_310/src/hybrid_vd/: train.py
diffuse_vae_310/src/hybrid_vd/configs/: train.yaml
notebooks/: sample.ipynb
scripts/: get_score.sh  test_ae_reconstruct.sh  test_ae_sample.sh  test_ddpm.sh
src/baseline/: __main__.py  extract_latents.py  test.py  train_ae.py  train_ddpm.py  util.py
src/baseline/configs/: config.yaml
src/baseline/configs/dataset/cifar10/: test.yaml  train.yaml
src/baseline/datasets/: celeba_mask.py  cifar10.py  ffhq.py
src/baseline/eval/ddpm/: sample.py  sample_cond.py
src/baseline/models/: callbacks.py
src/baseline/models/diffusion/: wrapper.py
src/hybrid_vd/: __main__.py  main.py  test.py  train.py
src/hybrid_vd/configs/: config.yaml  test.yaml  train.yaml
src/hybrid_vd/models/: diffuse_vae.py
src/hybrid_vd/models/diffusion/: wrapper.py
tests/: test_datasets.py
